--- a/app/src/main/res/layout/activity_uploadimages.xml
+++ b/app/src/main/res/layout/activity_uploadimages.xml
@@ -61,20 +61,29 @@
         android:id="@+id/editText12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="228dp"
         android:ems="10"
         android:hint="Enter Name"
         android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/editText14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/button11"
+        android:layout_below="@+id/editText12"
+        android:ems="10"
+        android:hint="Enter Name"
+        android:inputType="textPersonName"
+        android:layout_alignLeft="@+id/button11" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="178dp"
         android:layout_height="171dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/button12"
@@ -99,13 +108,26 @@
     <TextView
         android:id="@+id/textView40"
         android:layout_width="76dp"
+        android:layout_height="47dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/editText12"
+        android:layout_marginStart="38dp"
+        android:gravity="center"
+        android:text="Location"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_marginLeft="38dp"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/textView44"
+        android:layout_width="76dp"
         android:layout_height="57dp"
         android:layout_alignTop="@+id/rGroup"
+        android:layout_toLeftOf="@+id/imageView"
         android:layout_toStartOf="@+id/imageView"
         android:gravity="center"
         android:text="Diary"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_toLeftOf="@+id/imageView" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <Button
         android:id="@+id/button9"
